; ModuleID = '/home/carl/AnghaBench/git/extr_commit-graph.c_write_commit_graph_reachable.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit-graph.c_write_commit_graph_reachable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i32 }
%struct.split_commit_graph_opts = type { i32 }

@STRING_LIST_INIT_DUP = common dso_local global %struct.string_list zeroinitializer, align 4
@add_ref_to_list = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @write_commit_graph_reachable(i8* %0, i32 %1, %struct.split_commit_graph_opts* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.split_commit_graph_opts*, align 8
  %7 = alloca %struct.string_list, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.split_commit_graph_opts* %2, %struct.split_commit_graph_opts** %6, align 8
  %9 = bitcast %struct.string_list* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 bitcast (%struct.string_list* @STRING_LIST_INIT_DUP to i8*), i64 4, i1 false)
  %10 = load i32, i32* @add_ref_to_list, align 4
  %11 = call i32 @for_each_ref(i32 %10, %struct.string_list* %7)
  %12 = load i8*, i8** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.split_commit_graph_opts*, %struct.split_commit_graph_opts** %6, align 8
  %15 = call i32 @write_commit_graph(i8* %12, i32* null, %struct.string_list* %7, i32 %13, %struct.split_commit_graph_opts* %14)
  store i32 %15, i32* %8, align 4
  %16 = call i32 @string_list_clear(%struct.string_list* %7, i32 0)
  %17 = load i32, i32* %8, align 4
  ret i32 %17
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @for_each_ref(i32, %struct.string_list*) #2

declare dso_local i32 @write_commit_graph(i8*, i32*, %struct.string_list*, i32, %struct.split_commit_graph_opts*) #2

declare dso_local i32 @string_list_clear(%struct.string_list*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
